# kvex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  rebar.config
bench/: kvex_bench.erl
doc/: overview.edoc
native/kvex_nif/: Cargo.toml
native/kvex_nif/src/: lib.rs
src/: kvex.app.src  kvex.erl  kvex_app.erl  kvex_nif.erl  kvex_sup.erl
test/: kvex_SUITE.erl
